# StackAllocator

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
StackAllocator/Includes/StackAllocator/: Stack.hpp  Stack.inl  StackAllocator.hpp  StackAllocator.inl  ThreadSafeStack.hpp  ThreadSafeStack.inl  ThreadSafeStackAllocator.hpp  ThreadSafeStackAllocator.inl
StackAllocator/Includes/StackAllocator/Private/: IStack.hpp  SpinLock.hpp  SpinLock.inl
StackAllocator/Sources/: Test.cpp
